--- a/access.html
+++ b/access.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>respona/accesspage</title>
-    <link rel="stylesheet" href="access.css">
+    <link rel="stylesheet" href="style/access.css">
     <style>
         @import url('https://fonts.googleapis.com/css2?family=Open+Sans:wght@300;400;700&display=swap');
     </style>
